crates/viewer/dl_view_spatial/tests/snapshots/spawn_heuristics__four_color_views_and_one_segmentation.snap
---
source: crates/viewer/dl_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /image1,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /image2,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /image3,
                    query_filter: [
                        "+ $origin",
                    ],
                },
                RecommendedView {
                    origin: /image3/nested,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /segmented,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
            max_views_spawned: 8,
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [],
            max_views_spawned: 8,
        },
    ),
}
