crates/viewer/dl_view_spatial/tests/snapshots/spawn_heuristics__one_3d_view_one_2d_view.snap
---
source: crates/viewer/dl_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /camera/image,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
            max_views_spawned: 8,
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
            max_views_spawned: 8,
        },
    ),
}
