crates/viewer/dl_view_spatial/tests/snapshots/spawn_heuristics__should_be_two_separate_views_because_differing_sizes.snap
---
source: crates/viewer/dl_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /image,
                    query_filter: [
                        "+ $origin",
                    ],
                },
                RecommendedView {
                    origin: /image/segmentation,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
            max_views_spawned: 8,
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [],
            max_views_spawned: 8,
        },
    ),
}
